<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/toolbar_cart_bk"
    tools:context=".ContactsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_bk"
        android:minHeight="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/toolbar_contacts"
        app:navigationIcon="@drawable/arrow_left"
        app:title="@string/my_name"
        app:titleTextColor="@color/label_color"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fieldName"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:hint="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:textColorHint="@color/label_color"
                app:endIconDrawable="@drawable/account"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:textColor="@color/input_color"
                    android:text="@string/my_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/LayoutPhone"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/fieldPhone"
                        style="@style/Widget.Material3.TextInputLayout.FilledBox"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="5"
                        android:hint="@string/phone"
                        android:textColorHint="@color/label_color"
                        app:endIconMode="custom"
                        app:endIconDrawable="@drawable/phone_check">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/phone_num"
                            android:textColor="@color/input_color"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/fieldSelect"
                        style="@style/Widget.Material3.TextInputLayout.FilledBox"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/select"
                        android:textColorHint="@color/label_color"
                        app:endIconMode="dropdown_menu">

                        <AutoCompleteTextView
                            android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:inputType="none"
                            android:textSize="16sp"
                            android:gravity="center"
                            android:textColor="@color/input_color"
                            app:simpleItems="@array/phoneTypeArray"/>
                    </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fieldAddress"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:hint="@string/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:textColorHint="@color/label_color"
                app:endIconDrawable="@drawable/address"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:textColor="@color/input_color"
                    android:text="@string/my_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/LayoutCityCountry"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/fieldCity"
                        style="@style/Widget.Material3.TextInputLayout.FilledBox"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/city"
                        android:textColorHint="@color/label_color"
                        app:endIconMode="custom">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/city_name"
                            android:textColor="@color/input_color"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/fieldCountry"
                        style="@style/Widget.Material3.TextInputLayout.FilledBox"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/country"
                        android:textColorHint="@color/label_color"
                        app:endIconMode="custom">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/country_name"
                            android:textColor="@color/input_color"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fieldBirthday"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:hint="@string/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:textColorHint="@color/label_color"
                app:endIconDrawable="@drawable/calendar"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:textColor="@color/input_color"
                    android:text="@string/birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fieldNotes"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:hint="@string/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:textColorHint="@color/label_color"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:textColor="@color/input_color"
                    android:text="@string/note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>